force-app/src/objects/TR1__Team_Member__c.object
<CustomObject>
    <description>An association between an internal User, a Job and a particular role</description>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To specify if Team Member is active</description>
        <inlineHelpText>To specify if Team Member is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Date_From__c</fullName>
        <description>Start date of the role</description>
        <inlineHelpText>Start date of the role</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Date_to__c</fullName>
        <description>End date of the role</description>
        <inlineHelpText>End date of the role</inlineHelpText>
        <label>Date to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Type__c</fullName>
        <description>Linked to the Job Record Type</description>
        <formula>TR1__Job__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Linked to the Job Record Type</inlineHelpText>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <description>The Job for which the User is a Team Member</description>
        <inlineHelpText>The Job for which the User is a Team Member</inlineHelpText>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Team_Member_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>To specify the role of the Team Member</description>
        <inlineHelpText>To specify the role of the Team Member</inlineHelpText>
        <label>Team Member Role</label>
        <referenceTo>TR1__Team_Role__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who is the Team Member</description>
        <inlineHelpText>The User who is the Team Member</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>